--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Start</title>
+    <title>Title</title>
 </head>
 <body>
-Let's go!!!
-<hr>
-<a href="/finish"> <h4>Go to finish</h4></a>
-
 
 </body>
 </html>
