--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>End</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>The end project</h1>
+
 </body>
 </html>
