--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -8,6 +8,7 @@
 <div th:each="person : ${people}">
 <a  th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}"></a>
 </div>
+<p>Hello</p>
 </body>
 </html>
 
