--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <div th:each="person : ${people}">
-<a  th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}"></a>
-<<<<<<< HEAD
-<p>p</p>
-=======
-
->>>>>>> person
-</div>
+  <a th:href="@{/people/{id} (id=${person.getId()})}" th:text="${person.getName()}"></a>
+  </div>
+<br/>
+<hr/>
+<a href="/people/new">Create new Person!</a>
 </body>
 </html>
 
