--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,5 +7,7 @@
 <body>
 <p th:text="${person.getName()}"></p>
 <p th:text="${person.getId()}"></p>
+<a th:href="/people/{id}/edit (id = ${person.getId()})"></a>
+<a href="/people">To people list</a>
 </body>
 </html>
