--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -2,12 +2,21 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Человек</title>
+    <title>Person</title>
 </head>
 <body>
-<p th:text="${person.getName()}"></p>
 <p th:text="${person.getId()}"></p>
-<a th:href="/people/{id}/edit (id = ${person.getId()})"></a>
+<p th:text="${person.getName()}"></p>
+<p th:text="${person.getAge()}"></p>
+<p th:text="${person.getEmail()}"></p>
+<hr/>
+<br/>
+<form th:method="DELETE" th:action="@{/people/{id} (id = ${person.getId()})}">
+    <input type="submit" value="Delete"/>
+</form>
+<br/>
+<a th:href="@{/people/{id}/edit (id = ${person.getId()})}">Edit this person</a>
+<br/>
 <a href="/people">To people list</a>
 </body>
 </html>
